C1
File "<input>", line 1
    cylinder.Placement = FreeCAD.Placement(FreeCAD.Vector(0, 0, 0), FreeCAD.Rotation(FreeCAD.Vector(1, 0, 0), 90)
                                          ^
SyntaxError: '(' was never closed
